--- a/templates/fin_health/fin_health.html
+++ b/templates/fin_health/fin_health.html
@@ -7,7 +7,7 @@
 
 
 <div class="container">
-<h1>Financial Health</h1>
+<h1>Financial Health & Credit Card Advise</h1>
 
 <form action="/fin_result" method="post">
     <input type="hidden" name="username" value="{{ username }}">
