--- a/templates/fin_health/fin_health.html
+++ b/templates/fin_health/fin_health.html
@@ -24,7 +24,9 @@
     
     Total debts : <br>
     <input type="number" step="any" name="debt"><br><br>
-    
+
+    <br>
+    <p>It may take awhile to analyse your financial health.</p>
     <input type="submit" value="Submit">
 </form>
 
